--- a/delivery-auth-config.yml
+++ b/delivery-auth-config.yml
@@ -27,10 +27,11 @@ spring:
     datasource:
         data: classpath:/sql/data.sql
         driver-class-name: com.mysql.jdbc.Driver
-        password: root
+        password: 12345678
         platform: mysql
         schema: classpath:/sql/schema.sql
-        url: jdbc:mysql://localhost/oauth?verifyServerCertificate=false&useSSL=false&requireSSL=false
+        ##url: jdbc:mysql://localhost/oauth?verifyServerCertificate=false&useSSL=false&requireSSL=false
+        url: jdbc:mysql://localhost:3306/oauth?allowPublicKeyRetrieval=true&sslMode=DISABLED
         username: root
     jpa:
         database-platform: org.hibernate.dialect.MySQLDialect
