--- a/delivery-auth-config.yml
+++ b/delivery-auth-config.yml
@@ -23,19 +23,36 @@ security:
             resource-ids: resources
             scope: read,write
 
+##spring:
+##    datasource:
+##        data: classpath:/sql/data.sql
+##        driver-class-name: com.mysql.jdbc.Driver
+##        password: 12345678
+##        platform: mysql
+##        schema: classpath:/sql/schema.sql
+##        ##url: jdbc:mysql://localhost/oauth?verifyServerCertificate=false&useSSL=false&requireSSL=false
+##        url: jdbc:mysql://localhost:3306/oauth?allowPublicKeyRetrieval=true&sslMode=DISABLED
+##        username: root
+##    jpa:
+##        database-platform: org.hibernate.dialect.MySQLDialect
+##        generate-ddl: false
+##        hibernate:
+##            ddl-auto: none
+##        show-sql: true
+
 spring:
-    datasource:
-        data: classpath:/sql/data.sql
-        driver-class-name: com.mysql.jdbc.Driver
-        password: 12345678
-        platform: mysql
-        schema: classpath:/sql/schema.sql
-        ##url: jdbc:mysql://localhost/oauth?verifyServerCertificate=false&useSSL=false&requireSSL=false
-        url: jdbc:mysql://localhost:3306/oauth?allowPublicKeyRetrieval=true&sslMode=DISABLED
-        username: root
-    jpa:
-        database-platform: org.hibernate.dialect.MySQLDialect
-        generate-ddl: false
-        hibernate:
-            ddl-auto: none
-        show-sql: true
+  application:
+    name: discovery-auth-server
+  jpa:
+    show-sql: false
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL5Dialect
+  jmx:
+    enabled: false
+  datasource:
+    url: jdbc:mysql://localhost:3306/oauth?allowPublicKeyRetrieval=true&sslMode=DISABLED
+    username: root
+    password: 12345678
