--- a/delivery-eureka-server.yml
+++ b/delivery-eureka-server.yml
@@ -7,7 +7,9 @@ eureka:
   client:
     registerWithEureka: true
     fetchRegistry: false
+    enableSelfPreservation: false
     serviceUrl:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
   server:
     wait-time-in-ms-when-sync-empty: 3000
+    
