--- a/delivery-auth-server.yml
+++ b/delivery-auth-server.yml
@@ -18,8 +18,8 @@ security:
         client:
             access-token-validity-seconds: 1800
             authorized-grant-types: password,refresh_token
-            client-id: alexsandro
-            client-secret: $2a$10$p9Pk0fQNAQSesI4vuvKA0OZanDD2
+            client-id: admin
+            client-secret: $2a$10$r0RFDmpneBVryx.ihHK9gu6FFJQi4nTxQUqzdSTvrPpaKZMxigqpy
             resource-ids: resources
             scope: read,write
 
