--- a/delivery-auth-server.yml
+++ b/delivery-auth-server.yml
@@ -13,15 +13,26 @@ eureka:
   server:
     wait-time-in-ms-when-sync-empty: 3000
 
+#security:
+##    oauth2:
+##       client:
+##            access-token-validity-seconds: 1800
+##            authorized-grant-types: password,refresh_token
+##            client-id: admin
+##            client-secret: $2a$10$r0RFDmpneBVryx.ihHK9gu6FFJQi4nTxQUqzdSTvrPpaKZMxigqpy
+##            resource-ids: resources
+##            scope: read,write
+
 security:
     oauth2:
         client:
             access-token-validity-seconds: 1800
             authorized-grant-types: password,refresh_token
-            client-id: admin
-            client-secret: $2a$10$r0RFDmpneBVryx.ihHK9gu6FFJQi4nTxQUqzdSTvrPpaKZMxigqpy
+            client-id: coderef
+            client-secret: $2a$10$p9Pk0fQNAQSesI4vuvKA0OZanDD2
             resource-ids: resources
             scope: read,write
+
 
 ##spring:
 ##    datasource:
